--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/is-native-c.jar"/>
 	<classpathentry kind="lib" path="lib/is-runtime.jar"/>
 	<classpathentry kind="src" path="nls"/>
+	<classpathentry kind="src" path="examples"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
